Native/Test/KL/CORE-116.out
CORE-116.kl:2:1: error: type 'Foo' already registered with a different definition
