Native/Test/KL/CORE-116.kl
struct Foo { Integer bar; } ;
struct Foo { Scalar bar; } ;

operator entry()
{
}
